# webhook-inspector

./: .env.example  .gitignore  DECISIONS.md  README.md  SPEC.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: bins.py  deps.py  health.py  ingest.py  ws.py
backend/app/core/: config.py  errors.py  ids.py  rate_limit.py  redis.py  ssrf.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  bin.py  captured_request.py
backend/app/schemas/: bin.py  request.py
backend/app/services/: bins.py  capture.py  live.py  replay.py
backend/tests/: conftest.py  test_ingest.py  test_live.py  test_rate_limit.py  test_ssrf.py  test_ttl.py  test_websocket.py
frontend/: .env.example  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/hooks/: useLiveRequests.ts
frontend/src/pages/: BinPage.tsx  HomePage.tsx
